Import of BSDZ/win32-gui-xmlbuilder-0.2 from CPAN.
gitpan-cpan-distribution: Win32-GUI-XMLBuilder
gitpan-cpan-version:      0.2
gitpan-cpan-path:         BSDZ/win32-gui-xmlbuilder-0.2.zip
gitpan-cpan-author:       BSDZ
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-Win32::GUI::XMLBuilder version 0.1
+Win32::GUI::XMLBuilder version 0.2
 ==================================
 
-Copyright (c) 2003 Blair Sutton. All rights reserved. 
+Copyright (c) 2004 Blair Sutton. All rights reserved. 
 This program is free software; you can redistribute 
 it and/or modify it under the same terms as Perl itself. 
 
@@ -20,6 +20,10 @@ This module requires these other modules and libraries:
    Win32::GUI
    Win32::GUI::TabFrame
    XML::Twig
+
+INSTRUCTIONS
+
+Please read the perldoc and try the samples.
 
 AUTHOR
 
