--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
 * - default size to Parent's size (?)
 * - allow use of another variable name other than %GUI
-* - documentation
+* - more documentation
 * - more examples
