--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Win32::GUI::XMLBuilder version 0.21
+Win32::GUI::XMLBuilder version 0.30
 ===================================
 
 Copyright (c) 2004 Blair Sutton. All rights reserved. 
@@ -11,6 +11,7 @@ To install this module type the following:
 
    perl Makefile.PL
    make
+   make test
    make install
 
 DEPENDENCIES
@@ -18,7 +19,6 @@ DEPENDENCIES
 This module requires these other modules and libraries:
 
    Win32::GUI
-   Win32::GUI::TabFrame
    XML::Twig
 
 INSTRUCTIONS
