--- a/TODO
+++ b/TODO
@@ -1,4 +1,20 @@
-MDI support
-more documentation
-more examples
-default sizing algorithm ?
+Win32::GUI::Button
+==================
+map threestate => 3state
+
+Win32::GUI::ImageList
+=====================
+support Icon, Masked
+
+Need to support these objects
+=============================
+Win32::GUI::DC
+Win32::GUI::Region
+Win32::GUI::Toolbar
+Win32::GUI::Trackbar
+
+Wishlist
+========
+default sizing algorithm
+stylesheets
+
