--- a/TODO
+++ b/TODO
@@ -1,18 +1,9 @@
-Win32::GUI::Button
-==================
-map threestate => 3state
-
-Win32::GUI::Font
-================
-'size' attribute confused with array
-
-Win32::GUI::ImageList
-=====================
-support Icon, Masked
-
-Win32::GUI::Toolbar
-===================
-Add subitem support
+Objects that require updating
+=============================
+Win32::GUI::Button - map threestate to 3state
+Win32::GUI::Font - 'size' attribute confused with array
+Win32::GUI::ImageList - support Icon, Masked
+Win32::GUI::Toolbar - Add subitem support
 
 Need to support these objects
 =============================
@@ -20,8 +11,13 @@ Win32::GUI::DC
 Win32::GUI::Region
 Win32::GUI::Trackbar
 
+Helper Elements
+===============
+WGXTreeViewDir
+WGXTreeViewHash
+
 Wishlist
 ========
+allow top level widgets as children
 default sizing algorithm
 stylesheets
-
