--- a/TODO
+++ b/TODO
@@ -4,6 +4,8 @@ Win32::GUI::Button - map threestate to 3state
 Win32::GUI::Font - 'size' attribute confused with array
 Win32::GUI::ImageList - support Icon, Masked
 Win32::GUI::Toolbar - Add subitem support
+buildfile does not chdir and basename on Reload 
+genname should check if name already in use!
 
 Need to support these objects
 =============================
