--- a/README
+++ b/README
@@ -21,11 +21,9 @@ This module requires these other modules and libraries:
    Win32::GUI 6.71 or higher
    XML::Twig 3.14 or higher
 
-Latest versions of Win32::GUI are currently difficult to come
-by except via the CVS source tree. You can get a zipped
-distribution of 6.82 from here: -
+Latest version of Win32::GUI can be obtained from CPAN at: -
 
-http://www.numeninest.com/Perl/WGX/Win32-GUI-0.0.682.zip
+http://search.cpan.org/CPAN/authors/id/L/LR/LROCHER/Win32-GUI-0.99_1.zip
 
 INSTRUCTIONS
 
