--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Win32::GUI::XMLBuilder
 ======================
 
-Copyright (c) 2004 Blair Sutton. All rights reserved. 
+Copyright (c) 2007 Blair Sutton. All rights reserved. 
 This program is free software; you can redistribute 
 it and/or modify it under the same terms as Perl itself. 
 
@@ -18,12 +18,10 @@ DEPENDENCIES
 
 This module requires these other modules and libraries:
 
-   Win32::GUI 6.71 or higher
+   Win32::GUI 1.05 or higher
    XML::Twig 3.14 or higher
 
-Latest version of Win32::GUI can be obtained from CPAN at: -
-
-http://search.cpan.org/CPAN/authors/id/L/LR/LROCHER/Win32-GUI-0.99_1.zip
+Latest version of Win32::GUI can be obtained from CPAN.
 
 INSTRUCTIONS
 
