Import of BSDZ/Win32-GUI-XMLBuilder-0.39 from CPAN.
gitpan-cpan-distribution: Win32-GUI-XMLBuilder
gitpan-cpan-version:      0.39
gitpan-cpan-path:         BSDZ/Win32-GUI-XMLBuilder-0.39.tar.gz
gitpan-cpan-author:       BSDZ
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 CHANGES
 
+0.38 -> 0.39
+Added Perl Journal Article.
+
 0.37 -> 0.38
 Updated to work with Win32::GUI 1.05.
 Import specific constants.
